<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iShareRyde</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_phone_number">PhoneNumber</string>
    <string name="title_activity_enter_otp">EnterOTP</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_invite">Invite</string>
    <string name="title_activity_contacts_my_club">ContactsMyGroup</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login_via_phone_number">LoginViaPhoneNumber</string>
    <string name="title_activity_my_pool">MyPool</string>
    <string name="title_activity_select_route">SelectRoute</string>
    <string name="title_activity_join_pool">JoinPool</string>
    <string name="title_activity_check_pool">CheckPool</string>
    <string name="title_activity_trip_completed">TripCompleted</string>
    <string name="title_activity_user_refer_more_friends">UserReferMoreFriends</string>
    <string name="title_activity_all_notification_request">AllNotificationRequest</string>
    <string name="title_activity_update_pickup_location">UpdatePickupLocation</string>
    <string name="title_activity_owner_invite_friends">OwnerInviteFriends</string>
    <string name="title_activity_chat_to_all">ChatToAll</string>
    <string name="title_activity_chat_to_single">ChatToSingle</string>
    <string name="title_activity_share_location">ShareLocation</string>
    <string name="title_activity_location_in_map">LocationInMap</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_setting_details">SettingDetails</string>
    <string name="msgCrash">Exception <b>\"%1$s\"</b> has been successfully caught!\n</string>
    <string name="msgCrashCause">Exception <b>\"%1$s\"</b> (caused by <b>\"%2$s\"</b>) has been successfully caught!\n</string>
    <string name="dummy_name">Mic Tison</string>
    
    <string-array name="msgMem">
        <item>All your base are belong to us</item>
        <item>I\'m sorry Dave, I\'m afraid I can\'t do that</item>
        <item>Resistance is futile</item>
        <item>Technically I was never alive, but I appreciate your concern</item>
        <item>What do you want?</item>
        <item>By your command</item>
    </string-array>

    <string name="tag_where_work">Where do you work/study?</string>
    <string name="tag_where_live">Where do you live?</string>
    <string name="btnCrash">Test Calc</string>
    <string name="btnBackgroundCrash">Test Background Crash</string>
    <string name="btnNext">Next Activity</string>
    <string name="btnReport">Report It!</string>
    <string name="btnClose">Close</string>
    <string name="txtSendReportHint">Press <b>\"Report It!\"</b> to see the stuff</string>
    <string name="txtCrashTitle">Crash Caught</string>
    <string name="btnIgnore">Ignore</string>
    <string name="underline_text_home"><u>Home</u></string>
    <string name="underline_text_office"><u>Office</u></string>
    <string name="underline_text_call_driver"><u>(Call Driver)</u></string>
    <string name="text_label_tnc_website"><a href="http://ishareryde.com/terms.html">Terms and Conditions</a></string>
    <string name="facebook_app_id">1061232687227968</string>
    <string name="loading">Loading&#8230;</string>
    <string name="exceptionstring">Something went wrong, please try again!</string>
    <string name="title_activity_wallets_acitivity">WalletsAcitivity</string>
    <string name="title_activity_favorite_locations_acivity">FavoriteLocationsAcivity</string>
    <string name="text_firstloginclubs_member">Congratulations! You are already member of the following groups and can start sharing rides immediately!</string>
    <string name="text_firstloginclubs_notmember">Let\'s start!! Invite your friends to join your ride sharing groups</string>
    <string name="button_flc_create_club">Create more groups</string>
    <string name="button_flc_continue">Skip</string>
    <string name="button_flc_create_club_notmember">Create groups</string>
    <string name="button_flc_continue_notmember">Skip</string>
    <string name="btn_done">Done</string>
    <string name="hint_select_address">Enter address or select on map ></string>
    <string name="in_30min">In 30 min</string>
    <string name="in_1_hour">In 1 Hour</string>
    <string name="select_datetime">(Tap to change)</string>
    <string name="change">(tap to change)</string>
    <string name="how_many_passenger">How many co-passengers?</string>
    <string name="faq">How To &amp; FAQs</string>
    <string name="askforquery">Need Support?</string>
    <string name="quesiton1">What is iShareRyde?</string>
    <string name="quesiton2">What are groups and why do I need them?</string>
    <string name="quesiton3">Why can’t I search for rides like other apps?</string>
    <string name="quesiton4">What will it cost and how do I pay?</string>
    <string name="selectclub">Select a group from above</string>
    <string name="memberexcludingmsg">(Number in brackets is members including the person who created the group)</string>
    <string name="Affle_TRACKER_URL">http://affle.co/1111111111/clubmycab/clubmycabandroid/dl_android.php?ad2cid=1438003779&amp;affle</string>
    <string name="seatcount">3</string>
    <string name="otpsent">We have sent One Time Password (OTP) to your Mobile</string>
    <string name="mobikwik_nothave_account">Link a wallet to pay for rides quickly. \r\n\r\nYou do not have a Mobikwik wallet registered with your number. Click on \'Send OTP\' to create a wallet</string>
    <string name="mobikwik_already_account">Link a wallet to pay for rides quickly. \r\n\r\nYou already have a Mobikwik wallet registered with your number. Click on \'Send OTP\' to link it now</string>
    <string name="mobikwik_signup_tnc">User agrees to allow iShareRyde to transfer amount to/from user\'s Mobikwik wallet to settle fare splits at the end of each journey undertaken by the user. These transfers will be undertaken only after confirmation of fare split by both sending and receiving user. Further upon completion of journey and subsequent payment done, the User will not claim any other charges whatsoever from iShareRyde or its partners</string>
    <string name="str_text_termandcondition_mobikwik">By clicking on the button I agree to the terms &amp; conditions mentioned at the link below</string>
    <string name="str_text_termandcondition_mobikwik_coupon">1. Extra cash Amount is fixed at Rs. 50/- for a Minimum "Add Money" amount of Rs.50/- \r\n2. Sign Up platform, Coupon Redemption and Payment should be done on  iPhone, Windows or Android App\r\n3. Offer can be redeemed only once per user per card and is applicable for the "Add Money" payment done during the offer period on MobiKwik App\r\n4. Offer will be valid only for the transactions done through Debit Card or Credit Card. Not valid on Net Banking and Virtual Cards\r\n5. Offer valid for new MobiKwik user only\r\n6. Valid till 31st Oct\'15</string>
    <string name="underline_text_mobikwik_tnc"><u>Terms &amp; Conditions</u></string>
    <string name="str_text_termandcondition">By clicking on submit I agree to the terms &amp; conditions mentioned at the link below</string>
    <string name="str_home_pagger_heading">If you have open ride(s) invitations, they will appear here</string>
    <string name="str_problem">Problem</string>
    <string name="str_screen">Screen</string>
    <string name="str_description">Description</string>
    <string name="str_hint_description">Enter a brief but detailed description of the problem</string>
    <string name="str_thank">*Thank you for reporting a problem!\nOur team will look into this issue and correct it as soon as possible.</string>
    <string name="str_hint_where_problem">Enter where the problem happened</string>
    <string name="btn_submit">Submit</string>
    <string name="check_box">Call me to explain</string>
    <string name="promt">Ask a question</string>
    
    <string name="underline_text_book_a_cab"><u>Going alone, just find a cab</u></string>
    <string name="underline_text_save_favorites"><u>Save Favorites</u></string>

    <string-array name="needsupport_arrays">
        <item>Ask a question</item>
        <item>Report a problem</item>
    </string-array>

</resources>