<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_suggest_games"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:clickable="true" >

    <RelativeLayout
        android:id="@+id/rlHeaderReportProblem"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/color_dark_blue"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ivBackReportProblem"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvReportProblemHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/askforquery"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView_ReportProblem"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/rlHeaderReportProblem"
        android:layout_margin="10dp"
        android:background="@color/light_gray" >

        <LinearLayout
            android:id="@+id/llMainScrollSubReportProblem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/light_gray"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvReportProblem"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/askforquery"
                android:textColor="@color/bg_darkgray"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spinnerNeedSupport"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:spinnerMode="dropdown"
                android:textColor="@color/bg_darkgray" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/str_description"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_button_white_grey_boundry"
                android:ellipsize="none"
                android:gravity="top|left"
                android:inputType="textCapSentences|textMultiLine"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="3dp"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textColor="@color/bg_darkgray"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:text="We will respond to your query on the e-mail address registered with us"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/rlCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <CheckBox
                    android:id="@+id/cbCallMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box"
                    android:textColor="#000"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/rl_bottomReportProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnSubmitReport"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/color_dark_blue"
                    android:gravity="center"
                    android:text="@string/btn_submit"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>