<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/color_dark_blue"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/faq"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvQue1"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="#D9DBDE"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/quesiton1"
                android:textColor="#000"
                android:textStyle="bold" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerans1"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="6dp"
                app:fillColor="@android:color/black"
                app:pageColor="@android:color/white"
                app:radius="5dp"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="4dp"
                android:background="@color/light_gray" />

            <TextView
                android:id="@+id/tvQue2"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="#D9DBDE"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/quesiton2"
                android:textColor="#000"
                android:textStyle="bold" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerans2"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="6dp"
                app:fillColor="@android:color/black"
                app:pageColor="@android:color/white"
                app:radius="5dp"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="4dp"
                android:background="@color/light_gray" >
            </View>

            <TextView
                android:id="@+id/tvQue3"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="#D9DBDE"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/quesiton3"
                android:textColor="#000"
                android:textStyle="bold" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerans3"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="6dp"
                app:fillColor="@android:color/black"
                app:pageColor="@android:color/white"
                app:radius="5dp"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="4dp"
                android:background="@color/light_gray" />

            <TextView
                android:id="@+id/tvQue4"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="#D9DBDE"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/quesiton4"
                android:textColor="#000"
                android:textStyle="bold" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerans4"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="6dp"
                app:fillColor="@android:color/black"
                app:pageColor="@android:color/white"
                app:radius="5dp"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp" />
            
             <View
                android:layout_width="fill_parent"
                android:layout_height="4dp"
                android:background="@color/light_gray" />
            
            
             <TextView
                android:id="@+id/tvQue5"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="#D9DBDE"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/quesiton5"
                android:textColor="#000"
                android:textStyle="bold" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerans5"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="6dp"
                app:fillColor="@android:color/black"
                app:pageColor="@android:color/white"
                app:radius="5dp"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="4dp"
                android:background="@color/light_gray" />
            
              <TextView
                android:id="@+id/tvQue6"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="#D9DBDE"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/quesiton6"
                android:textColor="#000"
                android:textStyle="bold" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerans6"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="6dp"
                app:fillColor="@android:color/black"
                app:pageColor="@android:color/white"
                app:radius="5dp"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp" />
            
        </LinearLayout>

       
    </ScrollView>

</LinearLayout>